[gd_scene load_steps=51 format=2]

[ext_resource path="res://Code/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_4.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_5.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_6.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_18.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_12.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_0.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_10.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_15.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_17.png" type="Texture" id=13]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_13.png" type="Texture" id=14]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_14.png" type="Texture" id=15]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_11.png" type="Texture" id=16]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_9.png" type="Texture" id=17]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_16.png" type="Texture" id=18]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_7.png" type="Texture" id=19]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_19.png" type="Texture" id=20]
[ext_resource path="res://Assets/Player/Idle/survivor-idle_handgun_8.png" type="Texture" id=21]
[ext_resource path="res://Assets/Player/shoot/survivor-shoot_handgun_2.png" type="Texture" id=22]
[ext_resource path="res://Assets/Player/shoot/survivor-shoot_handgun_1.png" type="Texture" id=23]
[ext_resource path="res://Assets/Player/shoot/survivor-shoot_handgun_0.png" type="Texture" id=24]
[ext_resource path="res://Assets/Others/Muzzle.png" type="Texture" id=25]
[ext_resource path="res://Assets/Player/HandgunReload/survivor-reload_handgun_4.png" type="Texture" id=26]
[ext_resource path="res://Assets/Player/HandgunReload/survivor-reload_handgun_1.png" type="Texture" id=27]
[ext_resource path="res://Assets/Player/HandgunReload/survivor-reload_handgun_9.png" type="Texture" id=28]
[ext_resource path="res://Assets/Player/HandgunReload/survivor-reload_handgun_6.png" type="Texture" id=29]
[ext_resource path="res://Assets/Player/HandgunReload/survivor-reload_handgun_5.png" type="Texture" id=30]
[ext_resource path="res://Assets/Player/HandgunReload/survivor-reload_handgun_12.png" type="Texture" id=31]
[ext_resource path="res://Assets/Player/HandgunReload/survivor-reload_handgun_8.png" type="Texture" id=32]
[ext_resource path="res://Assets/Player/HandgunReload/survivor-reload_handgun_0.png" type="Texture" id=33]
[ext_resource path="res://Assets/Player/HandgunReload/survivor-reload_handgun_2.png" type="Texture" id=34]
[ext_resource path="res://Assets/Player/HandgunReload/survivor-reload_handgun_10.png" type="Texture" id=35]
[ext_resource path="res://Assets/Player/HandgunReload/survivor-reload_handgun_7.png" type="Texture" id=36]
[ext_resource path="res://Assets/Player/HandgunReload/survivor-reload_handgun_11.png" type="Texture" id=37]
[ext_resource path="res://Assets/Player/HandgunReload/survivor-reload_handgun_13.png" type="Texture" id=38]
[ext_resource path="res://Assets/Player/HandgunReload/survivor-reload_handgun_14.png" type="Texture" id=39]
[ext_resource path="res://Assets/Player/HandgunReload/survivor-reload_handgun_3.png" type="Texture" id=40]
[ext_resource path="res://Assets/Audio/Glock/GlockReload.wav" type="AudioStream" id=41]
[ext_resource path="res://Assets/Audio/Glock/Empty.wav" type="AudioStream" id=42]
[ext_resource path="res://Assets/Others/light.png" type="Texture" id=43]
[ext_resource path="res://PlayerCamera.gd" type="Script" id=44]
[ext_resource path="res://Assets/Others/BloodOverlay.png" type="Texture" id=45]
[ext_resource path="res://Assets/Audio/SoundEffects/PlayerDamage.wav" type="AudioStream" id=46]
[ext_resource path="res://Assets/Audio/Glock/GlockShoot.wav" type="AudioStream" id=47]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 27 ), ExtResource( 34 ), ExtResource( 40 ), ExtResource( 26 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 36 ), ExtResource( 32 ), ExtResource( 28 ), ExtResource( 35 ), ExtResource( 37 ), ExtResource( 31 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": true,
"name": "reload",
"speed": 24.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 11 ), ExtResource( 16 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 20 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 23 ), ExtResource( 22 ) ],
"loop": true,
"name": "shoot",
"speed": 24.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 59.8691
height = 0.0

[sub_resource type="Animation" id=3]
resource_name = "BloodFade"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 5.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, 0 )
scale = Vector2( 1.05632, 0.768519 )
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -1.49999, 13.5 )
rotation = -1.64749
scale = Vector2( 0.728551, 1.37348 )
shape = SubResource( 2 )

[node name="PlayerArea" type="Area2D" parent="."]
position = Vector2( -1, 0 )
scale = Vector2( 1.05632, 0.768519 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2( -0.473329, 17.5663 )
rotation = -1.62665
scale = Vector2( 0.946683, 1.3012 )
shape = SubResource( 2 )

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.715, 1.396 )
script = ExtResource( 44 )

[node name="Tween" type="Tween" parent="PlayerCamera"]

[node name="CameraTimer" type="Timer" parent="PlayerCamera"]
one_shot = true

[node name="AimingPosition" type="Position2D" parent="."]
position = Vector2( 130, 42 )
rotation = -1.55683

[node name="GlockReload" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 41 )

[node name="Empty" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 42 )

[node name="MuzzleFlash" type="Light2D" parent="."]
visible = false
position = Vector2( 187, 41 )
scale = Vector2( 0.3159, 0.308917 )
texture = ExtResource( 25 )
color = Color( 0.847059, 0.752941, 0.12549, 1 )
shadow_enabled = true

[node name="MuzzleBack" type="Light2D" parent="."]
visible = false
position = Vector2( 52, 42 )
scale = Vector2( 0.498535, 0.491455 )
texture = ExtResource( 43 )
texture_scale = 5.81
color = Color( 0.847059, 0.752941, 0.12549, 1 )
shadow_enabled = true

[node name="Flashlight" type="Light2D" parent="."]
position = Vector2( -8.00024, 9.99997 )
scale = Vector2( 2.4987, 1.8112 )
texture = ExtResource( 43 )
texture_scale = 1.5
shadow_enabled = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="HUD"]
margin_left = 83.0
margin_top = 68.0
margin_right = 295.0
margin_bottom = 108.0

[node name="Ammo" type="Label" parent="HUD/Panel"]
margin_left = 64.0
margin_top = 14.0
margin_right = 83.0
margin_bottom = 28.0
text = "##"

[node name="AmmoValue" type="Label" parent="HUD/Panel"]
margin_left = 10.0
margin_top = 14.0
margin_right = 59.0
margin_bottom = 28.0
text = "Bullets:"

[node name="BloodScreenTimer" type="Timer" parent="HUD/Panel"]
wait_time = 0.1
one_shot = true

[node name="BloodFadeAnimation" type="AnimationPlayer" parent="HUD/Panel/BloodScreenTimer"]
root_node = NodePath("../BloodSprite")
anims/BloodFade = SubResource( 3 )

[node name="BloodSprite" type="Sprite" parent="HUD/Panel/BloodScreenTimer"]
visible = false
position = Vector2( 531, 319 )
scale = Vector2( 0.828125, 0.805 )
texture = ExtResource( 45 )

[node name="PlayerHurt" type="AudioStreamPlayer2D" parent="HUD/Panel/BloodScreenTimer"]
stream = ExtResource( 46 )
volume_db = 10.0

[node name="BloodLight" type="Light2D" parent="HUD/Panel/BloodScreenTimer"]
visible = false
position = Vector2( 531.625, 322.125 )
scale = Vector2( 2.05615, 1.2417 )
texture = ExtResource( 43 )
color = Color( 0.694118, 0.0862745, 0.0862745, 1 )

[node name="ResetBloodScreen" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="GlockSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 47 )

[connection signal="body_entered" from="PlayerArea" to="." method="_on_PlayerArea_body_entered"]
[connection signal="timeout" from="PlayerCamera/CameraTimer" to="PlayerCamera" method="_on_CameraTimer_timeout"]
[connection signal="timeout" from="HUD/Panel/BloodScreenTimer" to="." method="_on_BloodScreenTimer_timeout"]
[connection signal="timeout" from="ResetBloodScreen" to="." method="_on_ResetBloodScreen_timeout"]
